[project]
name = "EDIT"
version = "0.2.6"
description = "Transform editor — translate, rotate, scale and bake Gaussian splat nodes"
authors = [{name = "Brian Davis (bb6)"}]
dependencies = []

[tool.lichtfeld]
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.5.0"
required_features = []


